Adds (stub) endpoint visualizer
- Modifies edit button to redirect to edit page, based on endpoint type
- Creates function to load all the values for specific endpoint and id
- Shows the values recieved (stub, only displays stringified JSON)

--- a/components/EndpointsVisualizer/endpointsHandler.module.scss
+++ b/components/EndpointsVisualizer/endpointsHandler.module.scss
@@ -9,6 +9,10 @@
       border-bottom: 1px solid;
       border-image-slice: 1;
       border-image-source: linear-gradient(to left, getGreen(0), getGreen(-5), getGreen(0));
+
+      h1:first-letter {
+        text-transform: capitalize;
+      }
     }
 
     .infoList {
