--- a/styles/Modal.module.scss
+++ b/styles/Modal.module.scss
@@ -41,11 +41,27 @@
 
           p {
             align-self: center;
+
+            &::after {
+              content: ':';
+            }
           }
         }
 
         .inputField {
           width: 60%;
+
+          input, select {
+            padding: .5rem;
+            font-size: inherit;
+
+            border: 1px solid getDark(5);
+            border-radius: .5rem;
+            background: linear-gradient(0, getWhite(5), getWhite(-5));
+
+            width: 100%;
+            height: fit-content;
+          }
         }
       }
     }
