Refactors create page
- Adds button to redirect to 'create' page
- Adds basic method to recollect info for new endpoint

--- a/styles/Modal.module.scss
+++ b/styles/Modal.module.scss
@@ -70,5 +70,10 @@
       display: flex;
       justify-content: space-around;
     }
+
+    .modalMessages {
+      text-align: center;
+      font-style: italic;
+    }
   }
 }
