Integrates useAsync with endpoint deletion
- Modifies deleteData to incorporate useAsync
- Modifies alerts for inline text about progress from useAsync

--- a/components/EndpointsVisualizer/endpointsHandler.module.scss
+++ b/components/EndpointsVisualizer/endpointsHandler.module.scss
@@ -22,7 +22,7 @@
         align-items: center;
         padding: .5rem;
 
-        .itemEdit, .itemTitle {
+        .itemEdit, .itemText {
           padding: .5rem;
         }
       }
