Implement image upload in images endpoint
- Adds color to image div for the sake of coloring consistent of inputs
- Adds filter to only allow images to be uploaded

--- a/pages/images/styles.module.scss
+++ b/pages/images/styles.module.scss
@@ -2,12 +2,16 @@
 
 .imageVisualizer {
   aspect-ratio: 16/9;
+  position: relative;
 
+  margin: 1rem;
   width: 75%;
-
   @include landscape {
     width: 50%;
   }
+
+  background: getDark(-1);
+  border: 2px solid getDark(-1.5);
 }
 
 .imageUploader {
